C2: "malformed control flow" after JDK-8303466

XMLWordPrintable

    • b20
    • 21

      The attached Java Fuzzer test (Test.java and Reduced2.java) starts to fail after JDK-8303466:

      To reproduce:

      $ java -Xcomp -XX:CompileOnly=Test -XX:-TieredCompilation Test.java
      $ java -Xcomp -XX:CompileOnly=Reduced -XX:-TieredCompilation Reduced.java (this reduced version starts to fail after JDK-8292088 which only reveals an existing issue)
      $ java -Xcomp -XX:CompileOnly=Reduced2 -XX:-TieredCompilation Reduced2.java

      Since Reduced.java is only slightly different compared to Reduced2.java, it suggests that JDK-8303466 also just revealed an existing issue as JDK-8292088 does.

      Maybe this bug is still related to the case reported in JDK-8308392.

      dist dump
      ---------------------------------------------
         0 1108 If === 1018 1107 [[ 1110 ]] P=0.000001, C=-1.000000 !orig=[1022]
         1 1110 IfTrue === 1108 [[ 1102 ]] #1 !orig=[994],[391],[390],[328] !jvms: Reduced2::test @ bci:34 (line 16)
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S24789/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3b2db3c6-2d3e-49c7-b1a7-865f1c6e16a3/runs/77b7bb02-69ed-459f-8e92-803916ef508e/workspace/open/src/hotspot/share/opto/compile.cpp:4003), pid=685778, tid=685793
      # assert(false) failed: malformed control flow
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0+20) (fastdebug build 21-ea+20-LTS-1677)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+20-LTS-1677, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x9b5332] Compile::final_graph_reshaping()+0x1262

        1. FuzzerUtils.java
          13 kB
        2. Reduced.java
          0.7 kB
        3. Reduced2.java
          0.7 kB
        4. Reduced3.java
          0.5 kB
        5. Reduced4.java
          0.5 kB
        6. Test.java
          8 kB
        7. Test2.java
          0.5 kB

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: