8308504: C2: "malformed control flow" after JDK-8303466